--- a/edge/config.yml.template
+++ b/edge/config.yml.template
@@ -1,22 +1,7 @@
-aws:
+greengrass_install:
 
-  # AWS region
-  region: 
+  # Desired installer version
+  version: '2.9.6'
 
-greengrass:
-
-  core:
-
-    # Name of the Greenrass core device:
-    iot_thing_name: 
-
-    # Name of the Greengrass that the core device will belong to:
-    group_name: 
-
-  install:
-
-    # Desired installer version
-    version: '2.9.6'
-
-    # Desired installation dir
-    rootpath: '/greengrass/v2'
+  # Desired installation dir
+  rootpath: '/greengrass/v2'
