--- a/config.yml.template
+++ b/config.yml.template
@@ -8,5 +8,5 @@ greengrass_core:
   # Name of the Greenrass core device:
   iot_thing_name: 
 
-  # Name of the Greengrass that the core device will belong to:
+  # Name of the Greengrass group that the core device will belong to:
   group_name:   
